# burrito-battle-minigames

./: CONTRIBUTING.md  LICENSE  README.md
contracts/hospital/: Cargo.toml  blobs.json  build.sh
contracts/hospital/src/: lib.rs  migrate.rs  xcc.rs
contracts/incursion/: Cargo.toml  blobs.json  build.sh
contracts/incursion/src/: lib.rs  migrate.rs  xcc.rs
