[package]
name = "incursion"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.4"
uint = { version = "0.8.3", default-features = false }
serde_json = "1.0"

[dependencies.serde_with]
version = "1.4.0"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"